--- a/Jello.xcodeproj/xcshareddata/xcschemes/Jello.xcscheme
+++ b/Jello.xcodeproj/xcshareddata/xcschemes/Jello.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BC3DD00A2B35795800F27E8D"
+               BuildableName = "libJelloCompilerStatic.a"
+               BlueprintName = "JelloCompilerStatic"
+               ReferencedContainer = "container:Jello.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "BC9BBFB12AEFDE3D00FC068C"
                BuildableName = "Jello.app"
                BlueprintName = "Jello"
@@ -26,37 +40,20 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Jello.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO"
+            skipped = "YES"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BC9BBFC52AEFDE3E00FC068C"
-               BuildableName = "JelloTests.xctest"
-               BlueprintName = "JelloTests"
-               ReferencedContainer = "container:Jello.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BC9BBFCF2AEFDE3E00FC068C"
-               BuildableName = "JelloUITests.xctest"
-               BlueprintName = "JelloUITests"
-               ReferencedContainer = "container:Jello.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BCDA24462B233A8E002DCFCB"
+               BlueprintIdentifier = "BCEBEF412B35BE6900C10617"
                BuildableName = "JelloCompilerTests.xctest"
                BlueprintName = "JelloCompilerTests"
                ReferencedContainer = "container:Jello.xcodeproj">
