--- a/Jello.xcodeproj/xcshareddata/xcschemes/Jello.xcscheme
+++ b/Jello.xcodeproj/xcshareddata/xcschemes/Jello.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1510"
-   version = "1.7">
+   version = "2.1">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -31,6 +31,30 @@
                BlueprintIdentifier = "BC9BBFB12AEFDE3D00FC068C"
                BuildableName = "Jello.app"
                BlueprintName = "Jello"
+               ReferencedContainer = "container:Jello.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <TestPlanReference
+               reference = "container:Jello.xctestplan">
+            </TestPlanReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BCEBEF412B35BE6900C10617"
+               BuildableName = "JelloCompilerTests.xctest"
+               BlueprintName = "JelloCompilerTests"
                ReferencedContainer = "container:Jello.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
